# Horizon3

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
catalog/: _ontology.md  _schema.md  byline.yaml  commodities.yaml  equities.yaml  event_markers.yaml  events.yaml  issuers.yaml  jurisdictions.yaml  pairs.yaml  personas.yaml  release_calendar.yaml  release_taxonomy.yaml  standing_pieces.yaml  underlyings.yaml
docs/: START_HERE.md  cboe_vol_expansion.md  infrastructure_review.md
knowledge/: curate.py  ingest.py  notify.py  registry.yaml  search.py  topics.yaml
render/: __init__.py  article.py  charts.py  demo_flagship.py  demo_from_catalog.py  demo_taylor.py  events.py  factsheet.py  flagship_fed_model.py  from_catalog.py  from_graph.py  graph_corpus.py  jurisdiction.py  jurisdiction_facts.py  model_store.py  output_paths.py  theme.py  writer.py
scripts/: _regen_one.py  ais_agentic.py  ais_families.py  ais_report.py  ats.sh  ats_briefing.py  audit.py  build_release_calendar.py  capability_report.py  catalog_audit.py  catalog_to_mermaid.py  check_sysdoc_drift.py  curate.sh  currency_sweep.py  data_fitness.py  decomp_gallery.py  families_report.py  gen_article.py  gen_sysdoc.py  relationship_gallery.py  render_vision_graph.py  seed_graph.py  seed_neo4j_spine.py  seed_spine.py  skeleton_articles.py  state_space_dashboard.py  studio_matrix.py  surface_gallery.py  validate_catalog.py  validate_graph.py  vangogh_gallery.py  write_articles.py
tests/: conftest.py  test_ats_cross_jurisdiction.py  test_editorial_gate.py  test_from_graph.py  test_units.py  (+10 more)
(+197 files in other folders)
